# simd-cxx-old

./: .cproject  .project  AUTHOR  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  ONLINE  README  README.WINDOWS  RELEASE_NOTES  THANKS  VERSION  configure  doxygen.cfg
cmake/: CMakeLists.txt  FindBoost.cmake  FindOpenSplice.cmake  FindSimD.cmake  MacroOpenSplice.cmake.old  OpenSplice.cmake  osmacros.cmake
config/apps/: Macros-idl.GNU  Macros.GNU  Rules-idl.GNU  Rules.GNU
config/lib/: BOOST.MACROS.GNU  LIBRARY.MACROS.GNU  LIBRARY.MACROS.GNU.org  MACROS.COMMOM.GNU  Macros.GNU  RULES.COMMOM.GNU  Rules.GNU
config/lib/tmp/: CARDAMOM.MACROS.GNU  CPP_UNIT.MACROS.GNU  IDL.MACROS.GNU  ORB.MACROS.GNU  TAO.MACROS.GNU
demo/ddj-series/01/: CMakeLists.txt  tspub.cpp  tssub.cpp  util.cpp  util.hpp
demo/ddj-series/02/: CMakeLists.txt  tssub.cpp  util.cpp
demo/ddj-series/03/: CMakeLists.txt
demo/hello/: CMakeLists.txt  Makefile  Makefile.idl  Makefile.pub  Makefile.sub  hello-pub.cpp  hello-sub.cpp  hello-traits.hpp  hello.idl
demo/ishapes/: BouncingShapeDynamics.cpp  BouncingShapeDynamics.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  DDSShapeDynamics.cpp  DDSShapeDynamics.hpp  FilterDialog.cpp  FilterDialog.hpp  Makefile  Makefile.idl  README  ReaderQosDialog.cpp  ReaderQosDialog.hpp  Shape.cpp  Shape.hpp  ShapeDynamics.cpp  ShapeDynamics.hpp  ShapesDialog.cpp  ShapesDialog.hpp  ShapesWidget.cpp  ShapesWidget.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  WriterQosDialog.cpp  WriterQosDialog.hpp  config.hpp  filterForm.ui  iShapesForm-small.ui  iShapesForm.ui  ishape.idl  ishape.qrc  ishapeiop.idl  ishapes.pro  main.cpp  moc_ShapesDialog.cpp  moc_ShapesWidget.cpp  qosForm.ui  (+3 more)
demo/ishapes/macos/: filterForm.ui  iShapesForm-small.ui  iShapesFormWide.ui  readerQosForm.ui  writerQosForm.ui
demo/latency/: CMakeLists.txt  latency-pub.cpp  latency-sub.cpp  latency.idl
demo/lsa/: CMakeLists.txt  DIS.idl  Ship.cpp  Ship.hpp  lsa-pub.cpp  lsa-sub.cpp  traits.hpp
demo/ping/: CMakeLists.txt  Makefile  Makefile.apub  Makefile.idl  Makefile.pub  Makefile.sub  README  ping-asub.cpp  ping-pub.cpp  ping-sub.cpp  ping.idl
demo/tshapes/: CMakeLists.txt  Makefile  tspub  tspub.cpp  tssub  tssub-async  tssub-async.cpp  tssub.cpp  util.cpp  util.hpp
demo/tweet/: CMakeLists.txt  Makefile  tweet-pub  tweet-pub.cpp  tweet-sub  tweet-sub.cpp  tweet.idl
docs/: README
src/dds/: CMakeLists.txt  assertion.cpp  assertion.hpp  assertion_impl.hpp  condition.cpp  condition.hpp  config.cpp  config.hpp  content_filtered_topic.hpp  dds.cpp  dds.hpp  domain.cpp  domain.hpp  exception.cpp  exception.hpp  instance_reader.hpp  instance_writer.hpp  memory.cpp  memory.hpp  os-linux.hpp  os-win32.hpp  osmacros.hpp  ospl-ver.hpp  publisher.cpp  publisher.hpp  qos.cpp  qos.hpp  reader.hpp  runtime.cpp  runtime.hpp  signals.hpp  subscriber.cpp  subscriber.hpp  topic.hpp  topic_description.cpp  topic_description.hpp  traits.hpp  types.hpp  waitset.cpp  waitset.hpp  (+1 more)
src/dds/peer/: condition_impl.cpp  condition_impl.hpp  content_filtered_topic_impl.hpp  instance_writer_impl.hpp  reader_impl.hpp  runtime_impl.cpp  runtime_impl.hpp  topic_impl.hpp  writer_impl.hpp
src/simd/: Makefile  assertion.cpp  assertion.d  assertion.hpp  assertion_impl.hpp  condition.cpp  condition.d  condition.hpp  config.hpp  domain.cpp  domain.hpp  exception.cpp  exception.d  exception.hpp  instance_reader.hpp  instance_writer.hpp  memory.cpp  memory.d  memory.hpp  publisher.cpp  publisher.hpp  qos.cpp  qos.d  qos.hpp  qos.mapping  reader.hpp  runtime.cpp  runtime.d  runtime.hpp  simd.cpp  simd.hpp  topic.cpp  topic.d  topic.hpp  traits.hpp  waitset.cpp  waitset.hpp  writer.hpp  writer.hpp.org
